--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 permalink: /:title
 
-title: piccus.github.io
+title: piccus anda's blog
 url: http://piccus.github.io
 feed: /atom.xml
 author_info: <a href="http://piccus.github.io/">Piccus Anda</a>
